--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node js Crawler",
   "main": "index.js",
   "scripts": {
-    "start": "node_modules/ts-node/dist/bin.js app.ts",
+    "start": "app.ts",
     "test": "jest"
   },
   "repository": {
@@ -12,13 +12,13 @@
     "url": "git+ssh://github.com/dhazan2/Crawler.git"
   },
   "private": true,
-  "dependencies": {
-    "ts-node": "^8.6.2",
-    "typescript": "^3.8.3"
-  },
   "devDependencies": {
+    "@types/jest": "^29.5.5",
     "@types/node": "^10.14.15",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   },
   "author": "",
   "license": "ISC",
