--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "crawler",
+  "name": "typescript-starter",
   "version": "1.0.0",
-  "description": "node js Crawler",
+  "description": "Node with typescript starter",
   "main": "index.js",
   "scripts": {
-    "start": "app.ts",
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node build/index.js",
+    "start:dev": "npx nodemon",
     "test": "jest"
   },
   "repository": {
@@ -16,8 +18,11 @@
     "@types/jest": "^29.5.5",
     "@types/node": "^10.14.15",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "rimraf": "^5.0.5",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "author": "",
