--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "Node with typescript starter",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node dist/index.js",
     "start:dev": "npx nodemon",
-    "test": "jest"
+    "test": "jest",
+    "test:dev": "jest --watchAll",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "lint": "eslint . --ext .ts",
+    "lint-and-fix": "eslint . --ext .ts --fix"
   },
   "repository": {
     "type": "git",
@@ -17,8 +21,15 @@
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "@types/node": "^10.14.15",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
@@ -30,5 +41,12 @@
   "bugs": {
     "url": "https://github.com/dhazan2/Crawler/issues"
   },
-  "homepage": "https://github.com/dhazan2/Crawler#readme"
+  "homepage": "https://github.com/dhazan2/Crawler#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier-format && npm run lint",
+      "pre-push": "",
+      "...": "..."
+    }
+  }
 }
