--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
       "pre-push": "",
       "...": "..."
     }
+  },
+  "dependencies": {
+    "@types/jsdom": "^21.1.3",
+    "jsdom": "^22.1.0"
   }
 }
